реализовал crud для users
